<resources>
    <string name="app_name">Putra</string>

    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registerBtn">Register</string>
    <string name="loginBtn">Login</string>
    <string name="tvMe">Me</string>
    <string name="tvPets">Pets</string>
    <string name="btnAddPet">Add Pet</string>

    <string name="tvpetName">Name</string>
    <string name="tvpetType">Type</string>
    <string name="tvpetBreed">Breed</string>
    <string name="tvpetGender">Gender</string>
    <string name="tvpetSize">Size</string>
    <string name="tvpetBirth">Birth Year</string>
    <string name="aboutMe">About Me</string>
    <string name="becomeSitter">Become  a sitter</string>
    <string name="tvSettings">Settings</string>
    <string name="tvnotificationSettings">Notification Settings</string>
    <string name="tvLogout">Logout</string>
    <string name="tvName">Name</string>
    <string name="tvFirstName">First Name</string>
    <string name="tvLastName">Last Name</string>
    <string name="tvContactInfo">Contact Info</string>
    <string name="submit">Submit</string>
    <string name="tvInfo">Info</string>
</resources>