<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile"
    android:background="@color/light_grey"
    >


    <agency.tango.android.avatarview.views.AvatarView
        android:id="@+id/imageViwerProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvMe"
        android:textSize="15sp"
        android:layout_above="@id/aboutMeLayout"
        android:layout_marginLeft="10dp"
        />

    <LinearLayout
        android:id="@+id/aboutMeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/imageViwerProfile"
        android:background="@color/white"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="20dp"
        >
       <ImageView
           android:id="@+id/iconAboutMe"
           android:layout_width="20dp"
           android:layout_height="20dp"
           android:layout_gravity="center_vertical"
           android:layout_marginLeft="10dp"

           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutMe"
            android:textSize="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/becomeSitterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/aboutMeLayout"
        android:background="@color/white"
        >
        <ImageView
            android:id="@+id/iconBecomeSitter"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/becomeSitter"
            android:textSize="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSettings"
        android:textSize="15sp"
        android:layout_below="@id/becomeSitterLayout"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        />

    <LinearLayout
        android:id="@+id/notificationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tvSettings"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="4dp"
        >
        <ImageView
            android:id="@+id/iconSettings"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvnotificationSettings"
            android:textSize="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/logoutLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/notificationLayout"
        android:background="@color/white"
        >
        <ImageView
            android:id="@+id/iconLogout"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvLogout"
            android:textSize="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</RelativeLayout>