<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditPetsAcitivity2"
        android:orientation="vertical"
        android:background="@color/light_grey"
        android:padding="5dp">


        <agency.tango.android.avatarview.views.AvatarView
            android:id="@+id/selectImageViewPet"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tvInfo"
             android:layout_marginBottom="20dp"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:background="@color/white"
           >
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/tvpetName"
               android:textSize="20sp"
               android:paddingTop="20dp"/>

           <EditText
               android:id="@+id/etEditPetName"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>


           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/tvpetType"
               android:textSize="20sp"/>

           <EditText
               android:id="@+id/etEditPetType"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>


           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/tvpetBreed"
               android:textSize="20sp"/>

           <EditText
               android:id="@+id/etEditPetBreed"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>


           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/tvpetGender"
               android:textSize="20sp"/>

           <EditText
               android:id="@+id/etEditPetGender"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>



           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/tvpetSize"
               android:textSize="20sp"/>

           <EditText
               android:id="@+id/etEditPetSize"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>


           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/tvpetBirth"
               android:textSize="20sp"/>

           <EditText
               android:id="@+id/etEditPetBirth"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>

       </LinearLayout>





        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Additional Info"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvVaccinated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="Vaccinated"
                    android:textSize="20dp"/>

                <Switch
                    android:id="@+id/vaccinatedSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingRight="20dp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/tvNeutered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="Neutered"
                    android:textSize="20dp"/>

                <Switch
                    android:id="@+id/neuteredSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingRight="20dp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </RelativeLayout>

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</ScrollView>
